# dg_bybit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MONITORING_DISABLED.md  MONITOR_GUIDE.md  PROFIT_IMPROVEMENT_PLAN.md  README.md  SYSTEM_OVERVIEW.md  TASKS.md  UPGRADE_PLAN.md  daily_report.sh  docker-compose.override.yml  docker-compose.yml  fix_stop_recovery.patch  monitor.sh  monitor_final.sh  monitor_robust.sh  monitor_smart.sh  monitor_v2.sh  monitor_v3.sh  monitor_v4.sh  operations_report_2026-02-21.md  pyproject.toml  redeploy.sh  requirements.txt  status.sh
.claude/: settings.json
.streamlit/: config.toml
config/: safety_limits.yaml
docker/: Dockerfile.analysis  Dockerfile.base  Dockerfile.bot  Dockerfile.dashboard  docker-entrypoint.sh
docs/base/: PRD.md  (+14 more)
scripts/: analyze_manual_trades.py  analyze_session_risk.py  analyze_trades.py  check_all_executions.py  check_balance.py  check_closed_pnl.py  check_grid_signal.py  check_orchestrator_state.py  check_order_history.py  check_position.py  check_status.sh  check_testnet_equity.py  close_position.py  crontab  debug_signature.py  debug_wallet.py  docker_rebuild.sh  force_close_position.py  generate_dry_run_report.py  monitor_mainnet.sh  monitor_testnet.sh  place_manual_order.py  review_bundle.sh  run_dashboard.sh  run_mainnet_dry_run.py  run_testnet_dry_run.py  test_dry_run_init.py  test_linear_usdt_testnet.py  test_mainnet_connectivity.py  test_sizing_with_testnet.py  verify_phase_completion.sh  verify_task_plan_consistency.sh  watchdog-service-install.sh  watchdog.sh
src/: __init__.py  main.py
(+340 files in other folders)
